tests/paczka1/small_fuzzy/35767764.err
Error in line 1: KHa45 S805 17,1
Error in line 2: sp91Dibpe S589 48,5
Error in line 3: A438 S589 46,6
